<resources>
    <string name="app_name">gamehuber</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="forget_password">Forget password?</string>
    <string name="create_account">Create Account?</string>
    <string name="reset_password">Reset password</string>
    <string name="create_an_account">Create an account</string>
    <string name="send_code">Send code</string>
    <string name="confirm">Confirm</string>
    <string name="ver_cod">Verification code</string>


    <string name="home">home</string>
    <string name="rank">rank</string>
    <string name="forum">forum</string>
    <string name="me">me</string>

    <string name="search_transition_name">transition_reveal</string>

    <string name="followed_games">Followed Games</string>
    <string name="official_community">Official Community</string>

    <string name="more">more</string>
    <string name="hot_games">Hot Games</string>
    <string name="loading_text">loading...</string>

    <string name="date_cancle">取消</string>
    <string name="date_title">请选择时间</string>
    <string name="date_commit">确定</string>
    <string name="date_year">年</string>
    <string name="date_month">月</string>
    <string name="date_day">日</string>
    <string name="date_hour">时</string>
    <string name="date_minute">分</string>
</resources>
