<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2"
        android:id="@+id/horizontal_line_2"
        />
    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        android:id="@+id/horizontal_btn"
        />
    <ImageView
        android:id="@+id/close"
        android:layout_marginRight="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@mipmap/close"
        />
    <TextView
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="@+id/close"
        app:layout_constraintRight_toLeftOf="@+id/close"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_title"
        style="@style/main_text" />


   <EditText
       app:layout_constraintTop_toTopOf="@id/horizontal_line_2"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
       android:layout_width="0dp"
       android:layout_height="44dp"
       android:id="@+id/userEmail"
       android:background="@null"
       android:hint="@string/email"
       android:textSize="@dimen/txt_size_norl"
       android:gravity="center|right"
       />
        <View
            app:layout_constraintTop_toBottomOf="@+id/userEmail"
            app:layout_constraintLeft_toLeftOf="@+id/userEmail"
            app:layout_constraintRight_toRightOf="@+id/userEmail"
            style="@style/gray_line"/>

    <EditText
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userEmail"
        app:layout_constraintLeft_toLeftOf="@+id/userEmail"
        app:layout_constraintRight_toRightOf="@+id/userEmail"
        android:id="@+id/userNewPwd"
        android:layout_height="44dp"
        android:background="@null"
        android:gravity="center|right"
        android:hint="@string/reset_your_password"
        android:textSize="@dimen/txt_size_norl"
        android:layout_width="0dp" />
    <View
        app:layout_constraintTop_toBottomOf="@+id/userNewPwd"
        app:layout_constraintLeft_toLeftOf="@+id/userNewPwd"
        app:layout_constraintRight_toRightOf="@+id/userNewPwd"
        style="@style/gray_line"/>

    <EditText
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userNewPwd"
        app:layout_constraintLeft_toLeftOf="@+id/userNewPwd"
        app:layout_constraintRight_toRightOf="@+id/userNewPwd"
        android:id="@+id/confirm_password"
        android:layout_height="44dp"
        android:background="@null"
        android:gravity="center|right"
        android:hint="@string/confirm_password"
        android:textSize="@dimen/txt_size_norl"
        android:layout_width="0dp" />
    <View
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        app:layout_constraintLeft_toLeftOf="@+id/confirm_password"
        app:layout_constraintRight_toRightOf="@+id/confirm_password"
        style="@style/gray_line"/>

    <TextView
        android:id="@+id/sendCode"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/verCode"
        app:layout_constraintLeft_toLeftOf="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/code_btn_bg"
        android:text="@string/send_code"
        android:textSize="@dimen/txt_size_min"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/verCode"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:gravity="center|right"
        android:hint="@string/ver_cod"
        android:textSize="@dimen/txt_size_norl"
        app:layout_constraintBottom_toBottomOf="@+id/sendCode"
        app:layout_constraintRight_toRightOf="@+id/confirm_password"
        app:layout_constraintLeft_toRightOf="@+id/sendCode"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <View
        app:layout_constraintTop_toBottomOf="@+id/verCode"
        app:layout_constraintLeft_toLeftOf="@+id/verCode"
        app:layout_constraintRight_toRightOf="@+id/verCode"
        style="@style/gray_line"/>
    <Button
        android:id="@+id/btConfirm"
        style="@style/main_btn"
        android:layout_marginTop="20dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_btn" />


</android.support.constraint.ConstraintLayout>