<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06"
        android:id="@+id/horizontal_line_1"
        />
    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.26"
        android:id="@+id/horizontal_line_2"
        />

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/facebook_horizontal"
        />

    <ImageView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontal_line_1"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        app:layout_constraintDimensionRatio="h, 1:2"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        />

   <EditText
       app:layout_constraintTop_toTopOf="@id/horizontal_line_2"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       android:layout_marginLeft="40dp"
       android:layout_marginRight="40dp"
       android:layout_width="0dp"
       android:layout_height="44dp"
       android:id="@+id/userEmail"
       android:background="@null"
       android:hint="@string/email"
       android:textSize="@dimen/txt_size_norl"
       android:gravity="center|right"
       />
        <View
            app:layout_constraintTop_toBottomOf="@+id/userEmail"
            app:layout_constraintLeft_toLeftOf="@+id/userEmail"
            app:layout_constraintRight_toRightOf="@+id/userEmail"
            style="@style/gray_line"/>

    <EditText
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/userEmail"
        app:layout_constraintLeft_toLeftOf="@+id/userEmail"
        app:layout_constraintRight_toRightOf="@+id/userEmail"
        android:id="@+id/userPwd"
        android:layout_height="44dp"
        android:background="@null"
        android:gravity="center|right"
        android:hint="@string/password"
        android:textSize="@dimen/txt_size_norl"
        android:layout_width="0dp" />
    <View
        app:layout_constraintTop_toBottomOf="@+id/userPwd"
        app:layout_constraintLeft_toLeftOf="@+id/userPwd"
        app:layout_constraintRight_toRightOf="@+id/userPwd"
        style="@style/gray_line"/>
    <TextView
        android:id="@+id/forgetPassword"
        app:layout_constraintLeft_toLeftOf="@+id/userPwd"
        app:layout_constraintTop_toBottomOf="@+id/userPwd"
        android:layout_marginTop="10dp"
        android:text="@string/forget_password"
        android:textSize="@dimen/txt_size_min"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/createAccount"
        app:layout_constraintRight_toRightOf="@+id/userPwd"
        app:layout_constraintTop_toTopOf="@+id/forgetPassword"
        android:text="@string/create_account"
        android:textSize="@dimen/txt_size_min"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        style="@style/main_btn"
        android:id="@+id/btLogin"
        android:layout_marginTop="60dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userPwd"
        />

    <View
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/facebook_image"
        style="@style/gray_line"/>
    <ImageView
        android:id="@+id/facebook_image"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/facebook_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/facebook_horizontal"
        />

</android.support.constraint.ConstraintLayout>